Bug 627999 - Some -compose command line options won't work if they are the first or only argument; r=Neil